# unshuffle

./: .coveragerc  Makefile  README.md  pyproject.toml  requirements.txt  rp.py  unshfl.py  unshuffle.py
.github/workflows/: python-app.yml
tests/: conftest.py  make_dict.py  test_dictionary.py  test_remote.py  test_unshuffle.py  translate.py
tests/fixtures/: dict.txt  frequency.txt  ga.html  paragraph.txt  rp.html
unshuffle/: app.py  config.py  dict_.py  remote.py  rp.py  tools.py  unshfl.py  unshuffle.py
