[tool.poetry]
name = "unshuffle"
version = "0.1.5"
description = "Unshuffle words based on dictionary"
authors = ["Chris Weyland <github@nextmail.cc>"]
readme = "README.md"

[tool.poetry.scripts]
unshuffle = 'unshuffle.unshfl:run'

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
requests-cache = "^0.9.7"
bs4 = "^0.0.1"
pytest = "^7.2.0"
black = "^22.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
