[tool.poetry]
name = "unshuffle"
version = "0.1.7"
description = "Unshuffle words based on dictionary"
authors = ["Chris Weyland <github@nextmail.cc>"]
readme = "README.md"

[tool.poetry.scripts]
unshuffle = 'unshuffle.app:run'

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
requests-cache = "^0.9.7"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
black = "^22.12.0"
flake8 = "^6.0.0"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.0.0"
mypy = "^0.991"
types-beautifulsoup4 = "^4.11.6.1"
types-requests = "^2.28.11.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
